<resources>
    <string name="app_name" translatable="false">AndroidCore</string>
    <string name="general_ws_error">Service error</string>
    <string name="default_loading_text">Loading...</string>
    <string name="fragment_hello">Hello, I\'m a fragment</string>
    <string name="update_dlg_title">Update available</string>
    <string name="update_dlg_content">Update the app to get the latest features</string>
    <string name="update_dlg_positive">Go to Play Store</string>
    <string name="update_dlg_negative">Later</string>
    <string name="date">Date:</string>
    <string name="social_media_ws_error">Service error</string>
    <string name="no_matches_found">No matches found</string>
    <string name="facebook_app_id" translatable="false">454428268324408</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb454428268324408</string>
    <string name="fb_login_cancel">Log in canceled</string>
    <string name="google_auth_error">Authentication error. Please try later.</string>
    <string name="google_login_failure">Login failed. Please try later.</string>
    <string name="youtube_api_key" translatable="false">AIzaSyBw1pnjj5SSzCgOkmTvLpYxhLVeAwVKM78</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_login_text">Sign in</string>
    <string name="login_options_text">or sign in with</string>
    <string name="password_recovery_text">Forgot password?</string>
    <string name="sign_in_question_text">Don\'t have an account?</string>
    <string name="sign_in_text">Sign up</string>
    <string name="invalid_pass">Incorrect password</string>
    <string name="invalid_email">Incorrect email</string>
    <string name="cant_pass">You shall not pass</string>
    <string name="welcome">Welcome</string>
    <string name="error_connect">Cannot connect to network</string>
    <string name="email_password_ws_error">Incorrect username or password</string>
    <string name="email_confirmation_error">Error. Please verify your account.</string>
    <string name="social_networks_login_attempt_error">Error. Please Log in with Facebook or Gmail</string>
    <string name="improve_xperience_text">Improve your experience</string>
    <string name="select_teams_text">Choose your favorite teams...</string>
    <string name="skip_teams_text">Skip</string>
    <string name="continue_teams_text">Continue</string>
    <string name="team_image_description">Team image</string>
    <string name="team_name">Team</string>
    <string name="teams_ws_error">Service error</string>
    <string name="email_confirm_dialog_title">Verify email</string>
    <string name="email_confirm_dialog_content">Please verify your email to activate your account.</string>
    <string name="email_confirm_dialog_ok">"Read my email"</string>
    <string name="email_confirm_dialog_back">"Later"</string>
    <string name="name_sign_in_text">First Name</string>
    <string name="lastname_sign_in_text">Last Name</string>
    <string name="birthday_sign_in_text">Birth Date</string>
    <string name="gender_sign_in_text">Gender</string>
    <string name="email_sign_in_text">Email</string>
    <string name="pass_sign_in_text">Password</string>
    <string name="pass_confirm_sign_in_text">Confirm password</string>
    <string name="sign_in_button">Sign up</string>
    <string name="already_registered_dialog_title">Email already registered</string>
    <string name="already_registered_dialog_text">The email you have entered is already registered. Please, enter another one.</string>
    <string name="sign_in_success">Success!</string>
    <string name="sign_in_failure">This email is already registered</string>
    <string name="required_name">Name required</string>
    <string name="invalid_name">Invalid name</string>
    <string name="required_lastname">Last name required</string>
    <string name="invalid_lastname">Invalid last name</string>
    <string name="required_birthday">Birth date required</string>
    <string name="required_email">Email required</string>
    <string name="required_pass">Password required. Minimum 5 characters</string>
    <string name="required_pass_confirm">Confirmation required</string>
    <string name="passwords_doesnt_match">Passwords do not match</string>
    <string name="complete_sign_in_form">Please complete the form</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="sq_title">Squad</string>
    <string name="sq_coach">Coach</string>
    <string name="sq_keeper">Keeper</string>
    <string name="sq_defender">Defender</string>
    <string name="sq_midfielder">Midfielder</string>
    <string name="sq_attacker">Attacker</string>
    <string name="sq_goals">Goals scored</string>
    <string name="placeholder_path" translatable="false">https://cdn1.iconfinder.com/data/icons/flat-business-icons/128/user-512.png</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="not_say">I\'d rather not say</string>
    <string name="male_id" translatable="false">M</string>
    <string name="female_id" translatable="false">F</string>
    <string name="other_id" translatable="false">O</string>
    <string name="not_say_id" translatable="false">P</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>I\'d rather not say</item>
    </string-array>
    <string name="restore_text">Enter the confirmation code</string>
    <string name="restore_button">Restore</string>
    <string name="pass_restore_dialog_success">Confirmation code</string>
    <string name="pass_restore_dialog_failure">User not found</string>
    <string name="pass_restore_dialog_email_not_confirmed">Error. Please verify your account.</string>
    <string name="pass_restore_success">Success!</string>
    <string name="pass_restore_failure">Incorrect confirmation code</string>
    <string name="pin_required">Code required</string>
    <string name="restore_dialog_title">Change password</string>
    <string name="restore_dialog_text">To get a verification code, please enter your email</string>
    <string name="restore_dialog_button">Send</string>
    <string name="nav_league">Leagues</string>
    <string name="nav_apertura">Apertura</string>
    <string name="nav_apertura_alt">Torneo Apertura</string>
    <string name="nav_clausura">Clausura</string>
    <string name="nav_clausura_alt">Torneo Clausura</string>
    <string name="nav_worldcup">Home</string>
    <string name="nav_teams">Favorite Teams</string>
    <string name="nav_add_team">Add Teams</string>
    <string name="nav_peru">Peru</string>
    <string name="nav_promo">Specials</string>
    <string name="nav_promo_1">Sports Goods</string>
    <string name="nav_promo_2">Food and Drinks</string>
    <string name="nav_entertainment">Entertainment</string>
    <string name="nav_photo">Photo Editor</string>
    <string name="nav_player">Songs and Videos</string>
    <string name="nav_bet">Betting Houses</string>
    <string name="nav_account">Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_communications">Communications</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate_app">Rate our app</string>
    <string name="app_develop_for">App developed by</string>
    <string name="contact">Contact us</string>
    <string name="capsula_link">https://www.capsuladigital.com/</string>
    <string name="rate_message">Your opinion is very important to us, please rate or leave a comment to improve this application.\n\nThanks for your help!</string>
    <string name="rate_title">Rate the app</string>
    <string name="rate_btn_title">Go to the Play Store</string>
    <string name="share_message">Share Marcador Perú with your friends.\n</string>
    <string name="share_this_app">Share the app</string>
    <string name="up_title">My Profile</string>
    <string name="up_personal_data_title">Personal Information</string>
    <string name="up_my_teams_title">Favorite Teams</string>
    <string name="non_specific">Not specified</string>
    <string name="up_birthdate_title">Birth Date</string>
    <string name="up_birthdate">07/15/96</string>
    <string name="up_gender_title">Gender</string>
    <string name="up_gender">Male</string>
    <string name="up_email_title">Email</string>
    <string name="up_email">pguerrero.hdc@gmail.com</string>
    <string name="null_birthdate">00-00-0000</string>
    <string name="teams_not_found">Teams not found</string>
    <string name="up_edit_title">Edit</string>
    <string name="up_edit_save">Save</string>
    <string name="eud_edit_title">Update my information</string>
    <string name="eud_sucess">Success!</string>
    <string name="eud_failure">An error has occurred. Please try again.</string>
    <string name="dialog_back_title">Unsaved changes</string>
    <string name="dialog_back_content">You have unsaved changes. Are you sure you want to leave?</string>
    <string name="eut_edit_title">Update favorite teams</string>
    <string name="error_social_edit_title">You can\'t edit your profile</string>
    <string name="error_social_edit_content">If you want to edit this information, you must do it in Facebook or Gmail</string>
    <string name="ft_title">Matches</string>
    <string name="ft_info">The dates and times of the matches are in Peruvian time</string>
    <string name="ft_group">Group</string>
    <string name="ft_menu_title">Filter</string>
    <string name="ft_ab_calendar">Filter by date</string>
    <string name="ft_ab_teams">Filter by teams</string>
    <string name="sg_title">Songs</string>
    <string name="sf_menu_save">Save photo</string>
    <string name="sf_menu_share">Share photo</string>
    <string name="sf_menu_back">Take another photo</string>
    <string name="photo_instructions">Tap the button to take a photo or choose one from the Gallery</string>
    <string name="saved_photo_dialog_title">Success!</string>
    <string name="saved_photo_dialog_content">Your photo has been saved.</string>
    <string name="saved_photo_dialog_ok">Go to Gallery</string>
    <string name="saved_photo_dialog_back">Back</string>
    <string name="captured_photo_error">An error has occurred while taking the photo. Please try again.</string>
    <string name="sf_dialog_choose_title">Choose an option</string>
    <string-array name="sf_dialog_choose_options">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>Cancel</item>

    </string-array>
    <string name="d_user_name">Paolo Guerrero</string>
    <string name="d_user_email">pguerrero.hdc@gmail.com</string>
    <string name="d_nationality">Peru</string>
    <string name="s_universitario">Universitario</string>
    <string name="large_text">This is a large text. Wait, I think it\s not large enough. Is it now?</string>
    <string name="al_defender">Francisco Duclós</string>
    <string name="perm_ok">Permission accepted</string>
    <string name="perm_denied">Permission denied</string>
    <string name="perm_denied_message">Permissions are needed to continue</string>
    <string name="accept">OK</string>
    <string name="cancel">Cancel</string>
</resources>